# stars

./: .gitignore  BinFiles.cpp  BinFiles.h  CMakeLists.txt  Camera.cpp  Camera.h  Cube.cpp  Cube.h  Display.cpp  Display.h  Shader.cpp  Shader.h  Star.cpp  Star.h  Timer.cpp  Timer.h  main.cpp
hygdata_v3/: hygdata_v3cutDown.csv  hygdata_v3cutDown.ods  hygdata_v3mag.ods
shaders/cube/: cube.fs  cube.vs
shaders/lines/: lines.fs  lines.vs
shaders/star/: star.fs  star.vs
